users not allowed to submit bids if they're highest bidder, or if the bid is not high enough. Improvements to UI

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,1 +1,19 @@
-/* Add custom CSS here */
+/* Button Stuff */
+.btn-dark {
+    background-color: #2C3E50 !important;
+    border-color: #7b8a8b;
+}
+
+/* Navbar Stuff */
+.nav-link {
+    display: contents !important;
+}
+
+.bg-colored {
+    background: #2C3E50 !important;
+}
+
+.fa-paint-brush {
+    margin-right: 10px;
+    color: white;
+}
